--- a/assets/style.css
+++ b/assets/style.css
@@ -9,3 +9,82 @@ body {
     font-size: 16px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+h1 {
+    font-size: 56px;
+    color: #011936;
+    margin-bottom: 5rem;
+}
+
+h2 {
+    margin-bottom: 4rem;
+    font-size: 40px;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.btn {
+    font-size: 2.4rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color:#011936;
+    background-color: #ED254E;
+    border-radius: 4px;
+   
+}
+
+.btn-hover {
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem 0 rbga(8, 114, 224, 0.6);
+    transition: transform 150ms;
+    transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
+}
+
+#highscore-btn {
+    background: #ED254E;
+
+}
+
+#highscore-btn:hover {
+    box-shadow: 0 0.4rem 1.4rem 0 rbga(255,255, 0, 0.5);
+}
