--- a/assets/style.css
+++ b/assets/style.css
@@ -1,24 +1,24 @@
 body {
-    background-color: #F4FFFD;
+    background-color: rgb(29, 26, 26)
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 62.5%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 h1 {
-    font-size: 56px;
-    color: #011936;
+    font-size: 5.4rem;
+    color: white;
     margin-bottom: 5rem;
 }
 
 h2 {
+    font-size: 4.2rem;
     margin-bottom: 4rem;
-    font-size: 40px;
 }
 
 .container {
@@ -61,15 +61,15 @@ h2 {
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
-    color:#011936;
-    background-color: #ED254E;
+    color: rgb(28,26,26);
+    background: linear-gradient(90deg, rgb(18,92,255) 0%, rgb(0,102,255) 100%);
     border-radius: 4px;
    
 }
 
-.btn-hover {
+.btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rbga(8, 114, 224, 0.6);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(8, 114, 224, 0.6);
     transition: transform 150ms;
     transform: scale(1.03);
 }
@@ -81,10 +81,49 @@ h2 {
 }
 
 #highscore-btn {
-    background: #ED254E;
+    background: linear-gradient(90deg, rgb(255,247,9) 0%, rgb(240, 221, 6) 100%);
 
 }
 
 #highscore-btn:hover {
-    box-shadow: 0 0.4rem 1.4rem 0 rbga(255,255, 0, 0.5);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(255,255, 0, 0.5);
+}
+
+/* High Scores Page */
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 black;
+}
+
+input::placeholder {
+    color: black;
+}
+
+#usernmae {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: black;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    color: white;
+    text-align: center;
+}
+
+#saveScoreBtn {
+    border: none;
+    
 }
